Fix input textbox overflow
Added support for input font size to shrink automatically.

--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,15 @@ button{
     border:5px double black;
     border-radius: 8px;
     background-color: rgb(196, 255, 234);
+
+/*    
+    padding:5px;
+    border-radius:3px;
+    font-family:Arial;
+    width:100px;
+    font-size:13px;
+    height:20px; */
+      
 }
 
 div.title{
